--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
 				</div>
 			</div>
 			<div class="info">
-				<span>Внешний отступ вверх для текста ,а не для блока who-we-are. наверное так нельзя делать , ведь блок
-					могут
-					удалить и нижний блок наедет под собаку</span>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quaerat natus totam minima assumenda minus
 				saepe. Provident animi molestias quae ex laboriosam accusamus praesentium doloribus, vitae, veritatis dolor
 				sed distinctio.
@@ -51,8 +48,7 @@
 				Tempora veritatis pariatur sunt quod. Odit quae eveniet, hic molestiae mollitia reiciendis ut autem, vitae
 				incidunt quos fugit eos. Et vero velit aut tenetur aperiam quod repellat nemo, voluptate voluptatum.
 				A cum blanditiis quia minima rem ducimus vitae tempore quibusdam molestias delectus, harum ipsum. Nesciunt
-				asperiores volupt
-				<span>Подскажите пожалуйста , в чем ошибка ? </span>
+				asperiores volup
 			</div>
 		</main>
 		<footer class="footer"></footer>
